# Public-Knowledge-Base

Asimov/Dash CallCenter/: pyproject.toml
Asimov/Dash CallCenter/EDA/: eda.py
Hashtag Cursos/Automação Web/: Arquivo Inicial - Aula 1.ipynb
How Bootcamp Engenharia de Dados/hbed01_data_analysis/: main.py
How Bootcamp Engenharia de Dados/hbed02_crawler/: banco_de_imoveis.csv
Udemy/Complete Pyhton Bootcamp/: Learn Python.txt
Udemy/Curso de R/: Aula Final.R  Comandos Basicos.R  Como Utilizar o Help no R.R  Correlação e teste T.R  Exercicio.R  Função da Familia Apply.R  Gráficos.R  Importando Dados.R  Instalando pacotes.R  Lidando com Valores Incompletos.R  Manipulação de Dados.R  Vetores.R
Udemy/R Programming A-Z/: .RData  .Rhistory  01 - Tipos de Variaveis.R  02 - Usando Variaveis.R  03 - Variaveis Logicas e Operadores.R  04 - O While Loop.R  05 - O For Loop.R  06 - Afirmação If.R  07 - Exercicio Part 1.R  08 - O que é um Vetor.R  09 - O poder das operações entre vetores.R  10 - Funções R.R  11 - Packages in R.R  12 - Resumo da Sessão.R  13 - Exercicio Financial Anlysis.R  14 - Criando Matriz.R  15 - Nomeando indices de colunas e linhas de matrizes.R  16 - Operações Matriciais.R  17 - Visualização com Matplot.R  18 - Subconjunto.R  19 - Visualizando Subconjuntos.R  20 - Criando Sua Primeira Função.R  (+3 more)
YouTube/Plotly/: 1. Introducao ao Plotly.py  2. Graficos Basicos.py  4. Graficos Estatisticos II.py  main.ipynb  pyproject.toml
YouTube/Plotly/Dash/: dash_example.py
YouTube/Plotly/Introducao ao Plotly/: 3. Graficos Estatisticos I.py
pySpark/: pyspark_03.ipynb
(+65 files in other folders)
