[tool.poetry]
name = "dash callcenter"
version = "0.1.0"
description = ""
authors = ["leandro.amoras <amorasleandro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.13.1"
pandas = "^1.5.3"
ipykernel = "^6.21.2"
nbformat = "^5.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
